# Attoworld

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: calibrate_spectrometer.py  frog.py  numeric.py
python/: test_notebook.py
python/attoworld/: __init__.py
python/attoworld/data/: LunaResult.py  __init__.py  complex_envelope.py  complex_spectrum.py  data_structures.py  decorators.py  file_io.py  frog_data.py  intensity_spectrum.py  interop.py  luna_result.py  spectrogram.py  spectrometer_calibration.py  spectrometer_calibration_dataset.py  waveform.py  yaml_io.py
python/attoworld/file/: FROG_result.py  LunaResult.py  __init__.py  data_structures.py  dataclasses.py  file_io.py  interface_simulations.py  profileAndIntensity.py
python/attoworld/numeric/: __init__.py  atomic_units.py  numeric.py
python/attoworld/personal/: __init__.py
python/attoworld/personal/marco/: UVSpectrumAnalysis.py  VISSpectrumAnalysis.py  __init__.py  profileAndIntensity.py  trace_handler.py
python/attoworld/personal/nick/: __init__.py  impulse_response.py  nick.py
python/attoworld/personal/vlad/: __init__.py
python/attoworld/plot/: __init__.py  plot.py
python/attoworld/spectrum/: UVSpectrumAnalysis.py  VISSpectrumAnalysis.py  __init__.py  spectrum.py
python/attoworld/spectrum/calibration_data/: MPQ_Atto_FROG_Ocean_HDX-XR.npz  MPQ_Atto_Maya_184_1101nm.npz  MPQ_Atto_Reso_Spectrometer_Marco.npz  Reso_Spectrometer_CalibrationCorrection.npz  __init__.py
python/attoworld/wave/: __init__.py  frog.py  time_frequency.py  trace_handler.py  wave.py
src/: lib.rs  test_notebook.py
src/attolab/: __init__.py  attolab.py
src/attolab/file/: file_io.py
src/attolab/wave/: wave.py
src/attoworld/: __init__.py
src/attoworld/file/: __init__.py  file_io.py  interface_simulations.py
src/attoworld/numeric/: __init__.py  numeric.py
src/attoworld/personal/: __init__.py
src/attoworld/personal/vlad/: __init__.py
src/attoworld/plot/: __init__.py  plot.py
src/attoworld/spectrum/: UVSpectrumAnalysis.py  VISSpectrumAnalysis.py  __init__.py  spectrum.py
src/attoworld/spectrum/calibration_data/: 7315273LS-Deuterium-Halogen_CC-VISNIR.lmp  7315273LS-Halogen_CC-VISNIR.lmp
src/attoworld/wave/: __init__.py  wave.py
tests/: demo_notebook.py  test_numeric.py  test_time_frequency.py
