[package]
name = "attoworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "attoworld"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.25.0"
pyo3 = "0.25.1"
rand = "0.9.2"
rayon = "1.11.0"
rustfft = { version = "6.4.0", features = ["wasm_simd"] }

