[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "attoworld"
version = "2025.0.39"
authors = [{ name = "Nick Karpowicz", email = "nicholas.karpowicz@mpq.mpg.de" }]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyyaml",
    "marimo",
    "h5py",
    "pandas",
    "pyyaml",
]
description = "Tools from the Attosecond science group at the Max Planck Institute of Quantum Optics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = { file = "LICENSE" }

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "attoworld.attoworld_rs"
include = ["python/attoworld/spectrum/calibration_data/*"]

[project.urls]
Homepage = "https://github.com/NickKarpowicz/Attoworld"
Issues = "https://github.com/NickKarpowicz/Attoworld/issues"

[tool.ruff]
exclude = ["examples", "personal"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "A", "ICN", "PIE", "RET", "ARG", "D"]
ignore = ["E501", "D401", "D205", "D211", "D213", "D203"]
